# angular-rust-wasm

./: .gitignore  Cargo.toml  README.md  angular.json  build-console_log.sh  build-hello.sh  build-if-missing.sh  build-indexeddb.sh  build-julia.sh  build-module.sh  build-worker.sh  extra-webpack.config.prod.ts  extra-webpack.config.ts  karma.conf.js  package-lock.json  package.json  server.ts  tsconfig.app.json  tsconfig.worker.json
src/: index.html  styles.css
src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  app.module0.ts  app.server.module.ts
src/app/console_log/: console_log-routing.module.ts  console_log.component.html  console_log.component.spec.ts  console_log.component.ts  console_log.module.ts
src/app/hello/: hello-routing.module.ts  hello.component.html  hello.component.ts
src/app/home/: home.component.css  home.component.html
src/app/indexeddb/: indexeddb-routing.module.ts  indexeddb.component.spec.ts  indexeddb.component.ts  indexeddb.module.ts  indexeddb.worker.ts
src/app/julia/: julia-routing.module.ts  julia.component.css  julia.component.html  julia.component.spec.ts  julia.component.ts  julia.module.ts
src/app/worker/: actions.worker.ts  log.worker.ts  worker.component.html  worker.component.ts
src/assets/: dark.css  light.css
src/environments/: environment.prod.ts  environment.ts
wasm/console_log/: Cargo.toml
wasm/console_log/src/: lib.rs
wasm/hello/: Cargo.toml
wasm/indexeddb/: Cargo.toml
wasm/indexeddb/src/: lib.rs
wasm/julia/: Cargo.toml
(+1 files in other folders)
